<resources>
    <string name="app_name">FilmFilxs</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="Edit_movie">Edit Movies</string>
    <string name="Search">Search</string>
    <string name="Ratings">Ratings.</string>
    <string name="Favourites">Favourites</string>
    <string name="DisplayMovies">Display Movies</string>
    <string name="Register">Register</string>
    <string name="Rating">Rating</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="add_to_fev">Favourite</string>
</resources>